--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Play:700&display=swap" rel="stylesheet"> 
 
-    <title>Hello, world!</title>
+    <title>Covid19 Detector</title>
 
 <style>
 .mySlides {display:none;}
@@ -22,7 +22,7 @@
   </head>
   <body class="bg-light">
   	<div class="text-center py-1 bg-white">
-	<h1 style="font-family: 'Play', sans-serif;" class="text-primary">COVID-19 DETECTOR</h1>
+	<h1 style="font-family: 'Play', sans-serif;" class="text-primary">COVID19 DETECTOR</h1>
 	</div>
 <div class="container-fluid bg-white">
 	<div class="container-fluid mt-5 border rounded">
@@ -33,7 +33,7 @@
 			</div>
 			<div class="main col-md-4 px-5 border rounded bg-light">
 				<div class="row justify-content-center mb-4">
-				<button class="btn disabled btn-lg btn-warning">Type Your Details Here:"</button>
+				<button class="btn disabled btn-lg btn-warning">Type Your Details Here:</button>
 				</div>
 				<form>
 				  <div class="form-group">
