--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="row justify-content-center mb-4">
 				<button class="btn disabled btn-lg btn-warning">Type Your Details Here:"</button>
 				</div>
-				<form method="POST" onsubmit="return myFunction()">
+				<form method="POST" onsubmit="return myFunction()" action="#">
 				  <div class="form-group">
 				    <label for="age">Your Age</label>
 				    <input type="text" class="form-control" id="age" placeholder="Enter Your Age">
@@ -99,11 +99,39 @@
 				    Body Aches
 				  </label>
 				</div>
+				<div class="form-check">
+				  <input class="form-check-input" type="checkbox" name="shortness" id="shortness" value="option2">
+				  <label class="form-check-label" for="shortness">
+				    Shortness of Breathe
+				  </label>
+				</div>
+				<div class="form-check">
+				  <input class="form-check-input" type="trouble" name="trouble" id="bodyaches" value="option2">
+				  <label class="form-check-label" for="trouble">
+				    Severe Trouble in Breathing
+				  </label>
+				</div>
+				<div class="form-check">
+				  <input class="form-check-input" type="bluelips" name="bluelips" id="bodyaches" value="option2">
+				  <label class="form-check-label" for="bluelips">
+				    Blue Lips
+				  </label>
+				</div>
+				<div class="form-check">
+				  <input class="form-check-input" type="chestpain" name="chestpain" id="bodyaches" value="option2">
+				  <label class="form-check-label" for="chestpain">
+				    Chest Pain
+				  </label>
+				</div>
 				<div class="mt-3">
 				  <button type="submit" class="btn btn-primary">Submit</button>
 				</div>
 				</form>
-			</div>
+			<small id="travelHelp" class="form-text text-muted">
+				**This is just an experimental website. These results are not accurate. In case of any doubt, consult your doctor immediately
+				</small>
+				  
+</div>
 			<div class="col-md-4 text-center py-4 mt-4">
 				<button class="btn disabled btn-lg btn-primary">Myth Busters</button>
 					<div class="w3-content w3-section" style="max-width:100%">
@@ -125,6 +153,10 @@
 		</div>
 	</div>
 </div>
+	  
+	  
+**This is just an experimental website. These results are not accurate results. In case of any doubt, consult your doctor immediately 
+	  
 
 
 <script>
@@ -174,6 +206,11 @@ var headache = document.getElementById("headache");
 var fatigue = document.getElementById("fatigue");
 var chills = document.getElementById("chills");
 var bodyaches = document.getElementById("bodyaches");
+var shortness = document.getElementById("shortness");
+var trouble = document.getElementById("trouble");
+var bluelips = document.getElementById("bluelips");
+var chestpain = document.getElementById("chestpain");
+var flag = false;
 	if(cough.checked == true){
 		val = val + 1;
 	}
@@ -184,24 +221,43 @@ var bodyaches = document.getElementById("bodyaches");
 		val = val + 1;
 	}
 	if(sorethroat.checked == true){
-		val = val + 1.5;
+		val = val + 1.25;
 	}
 	if(fever.checked == true){
-		val = val + 2;
+		val = val + 1.5;
 	}
 	if(headache.checked == true){
 		val = val + 1;
 	}
 	if(fatigue.checked == true){
-		val = val + 2;
+		val = val + 1.25;
 	}
 	if(chills.checked == true){
-		val = val + 2;
+		val = val + 1.5;
 	}
 	if(bodyaches.checked == true){
+		val = val + 1;
+	}
+	if(shortness.checked == true){
 		val = val + 2;
 	}
-	alert("Your count is: "+val)
+	if(trouble.checked == true){
+		flag = true;
+		val = val + 3;
+	}
+	if(bluelips.checked == true){
+		flag = true;
+		val = val + 3;
+	}
+	if(chestpain.checked == true){
+		val = val + 2;
+	}
+	if(val >= 7 or flag = true){
+		alert("You need to consult a doctor");
+	} else{
+		alert("You need to observe some more days");
+	}
+
 }
 
 </script>
