--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="row justify-content-center mb-4">
 				<button class="btn disabled btn-lg btn-warning">Type Your Details Here:"</button>
 				</div>
-				<form method="POST" onsubmit="return myFunction()" action="#">
+				<form onsubmit="return myFunction()" action="#">
 				  <div class="form-group">
 				    <label for="age">Your Age</label>
 				    <input type="text" class="form-control" id="age" placeholder="Enter Your Age">
